# skillpulse-codex

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
docs/: interaction-log.md  release-v0.1.0.md  vibe-coding-case.md
src/: App.tsx  charts.ts  demoData.ts  format.ts  skillLabels.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: actions.rs  analytics.rs  catalog.rs  main.rs  storage.rs  usage.rs  windowing.rs
src/components/: IconDock.tsx  Shell.tsx
src/views/: ChainsView.tsx  ChartCard.tsx  MaintenanceView.tsx  OverviewView.tsx  SettingsView.tsx  SkillLibraryView.tsx  TrendsView.tsx
